--- a/Natours/index.html
+++ b/Natours/index.html
@@ -3,7 +3,41 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/main.css" />
     <title>Natours | Project</title>
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <div class="header__logo-box">
+        <img src="assets/images/logo-white.png" alt="Logo" class="header__logo" />
+      </div>
+
+      <div class="header__text-box">
+        <h1 class="heading-primary">
+          <span class="heading-primary--main">Outdoors</span>
+          <span class="heading-primary--sub">is where life happens</span>
+        </h1>
+
+        <a href="#" class="btn btn--animated">Discover our tours</a>
+      </div>
+
+      <div class="navigation">
+        <div class="navigation__button">
+          <span class="navigation__icon">&nbsp</span>
+        </div>
+
+        <div class="navigation__background">&nbsp</div>
+
+        <nav class="navigation__nav">
+          <ul class="navigation__list">
+            <li class="navigation__item">About natours</li>
+            <li class="navigation__item">Your benefits</li>
+            <li class="navigation__item">Popular tours</li>
+            <li class="navigation__item">Stories</li>
+            <li class="navigation__item">Book now</li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+  </body>
 </html>
