feat: add navigation style

--- a/Natours/index.html
+++ b/Natours/index.html
@@ -4,9 +4,29 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/main.css" />
+    <script src="js/index.js" defer></script>
     <title>Natours | Project</title>
   </head>
   <body>
+    <!--==================== NAVIGATION ====================-->
+    <div class="navigation" id="navigation">
+      <div class="navigation__button">
+        <span class="navigation__icon">&nbsp;</span>
+      </div>
+
+      <div class="navigation__background">&nbsp;</div>
+
+      <nav class="navigation__nav">
+        <ul class="navigation__list">
+          <li class="navigation__item"><a href="" class="navigation__link">About natours</a></li>
+          <li class="navigation__item"><a href="" class="navigation__link">Your benefits</a></li>
+          <li class="navigation__item"><a href="" class="navigation__link">Popular tours</a></li>
+          <li class="navigation__item"><a href="" class="navigation__link">Stories</a></li>
+          <li class="navigation__item"><a href="" class="navigation__link">Book now</a></li>
+        </ul>
+      </nav>
+    </div>
+    <!--==================== HEADER ====================-->
     <header class="header">
       <div class="header__logo-box">
         <img src="assets/images/logo-white.png" alt="Logo" class="header__logo" />
@@ -18,26 +38,12 @@
           <span class="heading-primary--sub">is where life happens</span>
         </h1>
 
-        <a href="#" class="btn btn--animated">Discover our tours</a>
-      </div>
-
-      <div class="navigation">
-        <div class="navigation__button">
-          <span class="navigation__icon">&nbsp</span>
-        </div>
-
-        <div class="navigation__background">&nbsp</div>
-
-        <nav class="navigation__nav">
-          <ul class="navigation__list">
-            <li class="navigation__item">About natours</li>
-            <li class="navigation__item">Your benefits</li>
-            <li class="navigation__item">Popular tours</li>
-            <li class="navigation__item">Stories</li>
-            <li class="navigation__item">Book now</li>
-          </ul>
-        </nav>
+        <a href="#" class="btn btn--white btn--animated">Discover our tours</a>
       </div>
     </header>
+
+    <main>
+      <!--==================== ABOUT SECTION ====================-->
+    </main>
   </body>
 </html>
