feat: add about section

--- a/Natours/index.html
+++ b/Natours/index.html
@@ -60,7 +60,11 @@
               </p>
               <a href="" class="btn-text">Learn more &rarr;</a>
             </div>
-            <div class="about__images"></div>
+            <div class="about__images">
+              <img src="./assets/images/nat-1-large.jpg" alt="Photo 1" class="about__img about__img--1" />
+              <img src="./assets/images/nat-2-large.jpg" alt="Photo 2" class="about__img about__img--2" />
+              <img src="./assets/images/nat-3-large.jpg" alt="Photo 3" class="about__img about__img--3" />
+            </div>
           </div>
         </div>
       </section>
